--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             </div>
 
            <div class="description-box">
-              <h4>Skatedeck challenge</h4>
+              <h3>Skatedeck challenge</h3>
               <p>A cross section designs I did combining my love for typography, grids and pop culture. Hope you enjoy these expressions...</p>
 
               <div class="categories">Brand Identity, Apparel and Marketing Design</div>
@@ -304,7 +304,7 @@
          </div>
 
          <div class="description-box">
-           <h4>Schweppes</h4>
+           <h3>Schweppes</h3>
            <p>These are brand, product and marketing designs done for Schweppes Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
 
            <div class="categories">Brand Identity, Apparel and Marketing Design</div>
@@ -325,7 +325,7 @@
             </div>
 
            <div class="description-box">
-              <h4>Dangote Flour</h4>
+              <h3>Dangote Flour</h3>
               <p>Review of the designs i created as the art director on the team creating social media content for Dangote Flour's Social Media Account.</p>
 
               <div class="categories">Art Direction</div>
@@ -345,7 +345,7 @@
             </div>
 
            <div class="description-box">
-              <h4>Budweiser</h4>
+              <h3>Budweiser</h3>
               <p>These are brand, product and marketing designs done for Budweiser Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
 
               <div class="categories">Brand, Product & Marketing Design</div>
@@ -365,7 +365,7 @@
             </div>
 
            <div class="description-box">
-              <h4>OneBank</h4>
+              <h3>OneBank</h3>
               <p>These are brand, product and marketing designs done for OneBank. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
 
               <div class="categories">Brand, Product & Marketing Design</div>
@@ -385,7 +385,7 @@
             </div>
 
            <div class="description-box">
-              <h4>Nivea</h4>
+              <h3>Nivea</h3>
               <p>A collection of Social Media designs and animations done for NIVEA MEN Nigeria's Facebook page.</p>
 
               <div class="categories">Social Media Design</div>
@@ -460,11 +460,11 @@
         </div>
         <div class="row contact__main">
           <div class="col-eight tab-full contact__form">
-            <h4 class="h06">Email</h4>
+            <h4 class="h06">Send me an email</h4>
             <p><a href="mailto:me@dum3bi.com?bcc=dum3bi@gmail.com&subject=Nice%20meeting%20you%20Dumebi&body=Hi%20Dumebi%2C%0D%0A%0D%0A" target="_blank">me@dum3bi.com</a></p>
           </div>
           <div class="col-four tab-full contact__infos">
-            <h4 class="h06">Phone</h4>
+            <h4 class="h06">Call me</h4>
             <p><a href="tel:234 9065 71 2102">234-9065-71-2102</a></p>
           </div>
 
