--- a/budweiser.html
+++ b/budweiser.html
@@ -76,6 +76,7 @@
                 <li><a href="index.html#home" title="home">Home</a></li>
                 <li><a href="index.html#about" title="about">About</a></li>
                 <li><a href="index.html#works" title="works">Works</a></li>
+                <li><a class="smoothscroll"  href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
                 <li class="current"><a href="scrapbook.html" title="blog">Scrapbook</a></li>
                 <li><a href="#contact" title="contact">Contact</a></li>
             </ul>
