--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                 <li><a class="smoothscroll"  href="#portfolio" title="works">Works</a></li>
+                <li><a class="smoothscroll"  href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
                 <li><a href="scrapbook.html" target="_blank" title="works">Scrapbook</a></li>
                 <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
             </ul>
@@ -108,7 +109,7 @@
 
               <h1>
                 Hi 👋🏼, I'm Dumebi, <br>
-                I design beautiful brands, products & experiences.
+                I design beautiful experiences & mentor designers.
               </h1>
 
              <div class="home-content__buttons">
@@ -431,11 +432,13 @@
     <div class="col-six tab-full right">
 
             <div>
-              <h3>Dumebi's passion for experience design can be traced back to his formal training as a medical radiographer, where he spent significant time working on patient diagnosis and care.</h3><br>
+              <h3>I am Dumebi (Du-may-be) Nnadirinwa Iwuchukwu, a designer based in Lagos, Nigeria. I have been practicing design for a little over 9 years now within organisations and freelance.</h3><br>
 
-               <p>As a designer, he specializes in art direction and product design.</p> <br>
+               <p>My practice is progressive, playful and human-centered with a focus on art direction and product design. I’m also a dreamer, an early-adopter and a chess player.</p> <br>
 
-                <p>He's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Haptics, Globacom and more.</p>
+                <p>During my design journey, I've had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
+
+                <p>Teaching and mentorship has always been a huge part of my growth as a designer and you can book a free mentorship session with me <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">on ADPlis.org</a> for career advice, interview techniques, design leadership and portfolio reviews</p>
             </div>
 
     </div>
