--- a/offline.html
+++ b/offline.html
@@ -84,6 +84,7 @@
                 <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                 <li><a class="smoothscroll"  href="#portfolio" title="works">Works</a></li>
+                <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
                 <li><a href="scrapbook.html" target="_blank" title="works">Scrapbook</a></li>
                 <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
             </ul>
@@ -108,7 +109,7 @@
 
               <h1>
                 Hi 👋🏼, I'm Dumebi, <br>
-                I design beautiful brands, products & experiences.
+                I design beautiful experiences & mentor designers.
               </h1>
 
              <div class="home-content__buttons">
@@ -300,7 +301,7 @@
          <div id="modal-02" class="popup-modal slider mfp-hide">
 
          <div class="media">
-           <img src="images/portfolio/modals/schweppes-m.png" alt="" />
+           <img src="images/portfolio/modals/schweppes-m.png" alt="" class="lazyload">
          </div>
 
          <div class="description-box">
@@ -321,7 +322,7 @@
          <div id="modal-03" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\dangote-selfie-m.jpg" alt="" />
+              <img src="images\portfolio\modals\dangote-selfie-m.jpg" alt="" class="lazyload">
             </div>
 
            <div class="description-box">
@@ -341,7 +342,7 @@
          <div id="modal-04" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\Budweiser-m.jpg" alt="budweiser label collage" />
+              <img src="images\portfolio\modals\Budweiser-m.jpg" alt="budweiser label collage" class="lazyload">
             </div>
 
            <div class="description-box">
@@ -361,7 +362,7 @@
          <div id="modal-05" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/modals/OneBank-m.png" alt="OneBank_Flatlay" />
+              <img src="images/portfolio/modals/OneBank-m.png" alt="OneBank_Flatlay" class="lazyload">
             </div>
 
            <div class="description-box">
@@ -381,7 +382,7 @@
          <div id="modal-06" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\nivea-m.jpg" alt="flatlay" />
+              <img src="images\portfolio\modals\nivea-m.jpg" alt="flatlay" class="lazyload">
             </div>
 
            <div class="description-box">
@@ -425,17 +426,19 @@
     <div class="container about-content">
 
     <div class="col-six tab-full left">
-    <img src="images\about.jpg" alt="" />
+    <img src="images\about.jpg" alt="" class="lazyload">
     </div>
 
     <div class="col-six tab-full right">
 
             <div>
-              <h3>Dumebi's passion for experience design can be traced back to his formal training as a medical radiographer, where he spent significant time working on patient diagnosis and care.</h3><br>
+              <h3>I am Dumebi (Du-may-be) Nnadirinwa Iwuchukwu, a designer based in Lagos, Nigeria. I have been practicing design for a little over 9 years now within organisations and freelance.</h3><br>
 
-               <p>As a designer, he specializes in art direction and product design.</p> <br>
+               <p>My practice is progressive, playful and human-centered with a focus on art direction and product design. I’m also a dreamer, an early-adopter and a chess player.</p> <br>
 
-                <p>He's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Haptics, Globacom and more.</p>
+                <p>During my design journey, I've had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
+
+                <p>Teaching and mentorship has always been a huge part of my growth as a designer and you can book a free mentorship session with me <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">on ADPlist.org</a> for career advice, interview techniques, design leadership and portfolio reviews</p>
             </div>
 
     </div>
