--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -84,7 +84,7 @@
                 <li><a href="index.html#home" title="home">Home</a></li>
                 <li><a href="index.html#about" title="about">About</a></li>
                 <li><a href="index.html#portfolio" title="works">Works</a></li>
-                <li><a class="smoothscroll"  href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
+                <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
                 <li><a href="scrapbook.html"  title="works">Scrapbook</a></li>
                 <li><a href="index.html#contact" title="contact">Contact</a></li>
               </ul>
