add Styleshout attribution

--- a/offline.html
+++ b/offline.html
@@ -292,7 +292,7 @@
            </div>
 
              <div class="link-box">
-                <a href="#" class="popup-modal-dismiss">See Details</a>
+                <a href="https://www.behance.net/gallery/97635239/Skate-Deck-Challenge-posters" target="_blank" rel="noopener">See Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -312,7 +312,7 @@
          </div>
 
           <div class="link-box">
-             <a href="#" class="popup-modal-dismiss">See Details</a>
+             <a href="https://www.behance.net/gallery/111873105/Schweppes-Nigeria" target="_blank" rel="noopener">See Details</a>
            <a href="#" class="popup-modal-dismiss">Close</a>
           </div>
 
@@ -353,7 +353,7 @@
            </div>
 
              <div class="link-box">
-                <a href="#">See Details</a>
+                <a href="https://www.behance.net/gallery/111872479/BUDXHOME" target="_blank" rel="noopener">See Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -509,7 +509,8 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                  <div>Copyright © 2019 Dumebi Iwuchukwu</div>
+                  <div>Content © 2021 Dumebi Iwuchukwu | HTML Template by <a href="https://www.styleshout.com/demo/?theme=hola"target="_blank" rel="noopener">Styleshout</a></div>
+                  <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Hosted on <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
                   <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                 </div>
 
