--- a/budweiser.html
+++ b/budweiser.html
@@ -232,7 +232,8 @@ code {
 
                 <div class="col-twelve">
                   <div class="copyright">
-                    <div>Copyright © 2019 Dumebi Iwuchukwu</div>
+                    <div>Content © 2021 Dumebi Iwuchukwu | HTML Template by <a href="https://www.styleshout.com/demo/?theme=hola"target="_blank" rel="noopener">Styleshout</a></div>
+                    <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Hosted on <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
                     <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                   </div>
 
