Update contact section copy

--- a/budweiser.html
+++ b/budweiser.html
@@ -175,7 +175,7 @@ code {
 
         <div class="row narrow section-intro">
             <div class="col-full">
-                <h3>Let's work together</h3>
+                <h3>How might we work together?</h3>
                 <h1>Contact me.</h1>
 
                 <p>I like to listen.</p>
