--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
         <div class="row narrow section-intro">
             <div class="col-full">
-                <h3>Let's work together</h3>
+                <h3>How might we work together?</h3>
                 <h1>Contact me.</h1>
 
                 <p style="text-align:center;" class="lead">I like to listen.</p>
