--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -197,7 +197,7 @@
             <div class="row footer-bottom">
 
                 <div class="col-twelve">
-                  <div>Copyright © 2019 Dumebi Iwuchukwu</div>
+                  <div>Copyright © 2019 Dumebi Iwuchukwu 神は私の人生をリードします</div>
                   <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                 </div>
 
