--- a/offline.html
+++ b/offline.html
@@ -507,7 +507,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                  <div>Content © 2021 Dumebi Iwuchukwu | HTML Template by <a href="https://www.styleshout.com/demo/?theme=hola"target="_blank" rel="noopener">Styleshout</a></div>
+                  <div>Content © 2021 Dumebi Iwuchukwu 神は私の人生をリードします</div>
                   <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Hosted on <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
                   <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                 </div>
