--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
+                <li><a class="smoothscroll"  href="about.html" title="about">About</a></li>
                 <li><a class="smoothscroll"  href="#portfolio" title="works">Works</a></li>
                 <li><a href="scrapbook.html" target="_blank" title="works">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
@@ -105,13 +105,13 @@
             <div class="row home-content__main">
 
 
-              <h1>
-                Hi 👋🏼, I'm Dumebi, <br>
-                I design beautiful experiences & mentor designers.
-              </h1>
+
 
              <div class="home-content__buttons">
-                 
+               <h1>
+                 Hi 👋🏼, I'm Dumebi, <br>
+                 I design beautiful experiences & mentor designers.
+               </h1>
              </div>
 
              <div class="home-content__scroll">
