update about page

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 
         <!-- page header/blog hero
         ================================================== -->
-        
+
 
         <div class="row blog-content">
             <div class="col-full blog-content__main">
@@ -100,16 +100,96 @@
                       About me
               </h1>
 
-                <p class="lead">I am Dumebi (Du-may-be) Nnadirinwa Iwuchukwu, a designer based in Lagos, Nigeria. I have been working in design for over 9 years now. Presently I'm an Art Director at <a href="https://www.webcoupers.com/" target="_blank" rel="noopener">Webcoupers Consulting</a>.</p>
+              <div class="col-six tab-full left">
+              <h3>I am Dumebi (Du-may-be) Nnadirinwa Iwuchukwu, a designer based in Lagos, Nigeria. I have been working in design for over 9 years now. Presently I'm an Art Director at <a href="https://www.webcoupers.com/" target="_blank" rel="noopener">Webcoupers Consulting</a>.</h3><br>
+              <img src="images\about.jpg" alt="" class="lazyload">
+              </div>
 
-                <p>My work is progressive  and human-centered with a focus on art direction and product design. I’m also a dreamer, an early-adopter and a chess player.</p> <br>
-                <p>During my design journey, I've had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
-                <p>Teaching and mentorship has always been a huge part of my growth as a designer and you can book a free mentorship session with me <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">on ADPlist.org</a> for career advice, interview techniques, design leadership and portfolio reviews.</p><br>
+
+              <div class="col-six tab-full right">
+
+                      <div>
+
+                         <p>My work is progressive  and human-centered with a focus on art direction and product design. I’m also a dreamer, an early-adopter and a chess player.</p> <br>
+                         <p>During my design journey, I've had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
+                         <p>Teaching and mentorship has always been a huge part of my growth as a designer and you can book a free mentorship session with me <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">on ADPlist.org</a> for career advice, interview techniques, design leadership and portfolio reviews.</p><br>
+                      </div>
+
+              </div>
+
 
 
 
 
             </div><!-- end blog-content__main -->
+
+            <div class="row about-content about-content--timeline">
+
+                <div class="col-full text-center">
+                    <h1>My Work Experience.</h1>
+                </div>
+
+                <div class="col-six tab-full left">
+                    <div class="timeline">
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">August 2020 - Present</p>
+                                <h3>Art Director</h3>
+                                <h5><a href="https://www.webcoupers.com/" target="_blank" rel="noopener">Webcoupers Consulting</a></h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>I handle Art direction, UI designs, Rich Media creatives, AR Instagram filter designs and marketing designs for a cross section of clients with output utilised across social media channels, print,  Google Display Network and other online platforms.</p>
+                            </div>
+                        </div> <!-- end timeline__block -->
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">April 2020 - Present</p>
+                                <h3>Design Mentor</h3>
+                                <h5><a href="https://adplist.org/" target="_blank" rel="noopener">ADPList</a></h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>ADPList is a platform where people can find, book and meet mentors from around the world. Here I mentor aspiring and current designers of diverse backgrounds and career stages, looking for support and guidance on various topics.</p>
+                            </div>
+                        </div> <!-- end timeline__block -->
+
+                    </div> <!-- end timeline -->
+                </div> <!-- end left -->
+
+                <div class="col-six tab-full right">
+                    <div class="timeline">
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2019 - 2020</p>
+                                <h3>Art Director</h3>
+                                <h5><a href="https://www.isobar.com/en-ke/offices/nigeria" target="_blank" rel="noopener">Isobar Nigeria</a></h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>I was responsible for Art direction, UX research, UI designs and graphic designs for a cross section of of multinational clients with output utilized across social media channels, Digital billboards and online platforms. Brands I worked on Included Budweiser, Sprite, Schweppes, Nivea Men, Three Crowns Milk and Peak Yoghurt.</p>
+                            </div>
+                        </div> <!-- end timeline__block -->
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2018 - 2019</p>
+                                <h3>Art Direction Instructor</h3>
+                                <h5><a href="https://02academylagos.com/" target="_blank" rel="noopener">O2 Academy Lagos</a></h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>I trained Art Directors on design principles, design thinking and design execution in the areas of Graphic Design, Art Direction, Communication Design, Brand Identity Design and UX/UI Design.</p>
+                            </div>
+                        </div> <!-- end timeline__block -->
+
+                    </div> <!-- end timeline -->
+                </div> <!-- end right -->
+
+            </div> <!-- end about-content timeline -->
         </div> <!-- end blog-content -->
 
     </article>
