--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a class="smoothscroll"  href="about.html" title="about">About</a></li>
+                <li><a href="about.html" target="_blank" title="about">About</a></li>
                 <li><a class="smoothscroll"  href="#portfolio" title="works">Works</a></li>
-                <li><a href="scrapbook.html" target="_blank" title="works">Scrapbook</a></li>
+                <li><a href="scrapbook.html" target="_blank" title="Scapbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
             </ul>
         </nav>
